@@ -130,11 +130,13 @@ _description:
 
 plugin: shell
 name: power-management/rtc
-command:
- test -e /dev/rtc || ( echo "ERROR: Real Time Clock not found" >&2 && exit 1 )
+requires:
+  rtc.state == 'supported'
+  package.name == 'util-linux'
+command: hwclock -r
 estimated_duration: 0.02
 _description:
- Make sure that the RTC (Real-Time Clock) device exists.
+ Verify that the Real-time clock (RTC) device functions properly, if present
 
 plugin: shell
 name: power-management/tickless_idle
